--- a/index.html
+++ b/index.html
@@ -24,31 +24,34 @@
                     </div>
                 </div>
         </div>
-        <div class="box-cards container">
-            <div class="card">
-                <div class="card__img"></div>
-                <div class="card__text card__text_width-one"></div>
+        <div class="box-cards">
+            <div class="flex-cards container">
+                <div class="card">
+                    <div class="card__img"></div>
+                    <div class="card__text card__text_width-one"></div>
+                </div>
+                <div class="card">
+                    <div class="card__img"></div>
+                    <div class="card__text card__text_width-two"></div>
+                </div>
+                <div class="card">
+                    <div class="card__img"></div>
+                    <div class="card__text card__text_width-free"></div>
+                </div>
+                <div class="card">
+                    <div class="card__img"></div>
+                    <div class="card__text card__text_width-four"></div>
+                </div>
+                <div class="card">
+                    <div class="card__img"></div>
+                    <div class="card__text card__text_width-five"></div>
+                </div>
+                <div class="card">
+                    <div class="card__img"></div>
+                    <div class="card__text card__text_width-six"></div>
+                </div>
             </div>
-            <div class="card">
-                <div class="card__img"></div>
-                <div class="card__text card__text_width-two"></div>
-            </div>
-            <div class="card">
-                <div class="card__img"></div>
-                <div class="card__text card__text_width-free"></div>
-            </div>
-            <div class="card">
-                <div class="card__img"></div>
-                <div class="card__text card__text_width-four"></div>
-            </div>
-            <div class="card">
-                <div class="card__img"></div>
-                <div class="card__text card__text_width-five"></div>
-            </div>
-            <div class="card">
-                <div class="card__img"></div>
-                <div class="card__text card__text_width-six"></div>
-            </div>
+            
         </div>
     </div>
 
