--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="top__green"></div>
         </div>
         <div class="info info-flex" >
-                <div class="container">
+                <div class="info-content">
                     <div class="info__title"></div>
                     <div class="info-flex">
                         <div class="info__subtitle"></div>
